--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,3 +4,8 @@
   -ms-user-select: none; /* IE 10+ */
   user-select: none; /* Likely future */
 }
+
+.black-stroke {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
